minor style change to try and stop text overlap

--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
   display:flex;
   justify-content: space-between;
   box-shadow: 0px 2px 2px #869398;
+  z-index: 1;
 }  
 
 html {
